Move Gradle build code into init scripts